test/classes/errors/nilability-init-var/init-var-nonnil-borrowed-from-oknil-nil.good
init-var-nonnil-borrowed-from-oknil-nil.chpl:9: error: cannot initialize 'lhs' of type 'borrowed MyClass' from 'nil'
